<resources>
    <string name="app_name">V-Troid</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="share">Sharing Is Caring</string>
    <string name="instagram">Instagram</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="view_stories">View Stories and Download from Private Account</string>
    <string name="download">Download</string>
    <string name="adv_search">Movie Search</string>
    <string name="paste_link">Paste Link</string>
    <string name="login">Login</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="download_started">Download Started</string>
    <string name="cancel">Cancel</string>
    <string name="do_u_want_to_download_media_from_pvt">Do you want to download media from private account</string>
    <string name="stories">Stories</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="yes">Yes</string>
    <string name="getting_downloading_link">Creating Download Links</string>
    <string name="saved_to">Saved to</string>
    <string name="app_not_available">App not available</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="downloading_des">In progress</string>
    <string name="don_start">Download Strated</string>
    <string name="AdmobAppId" translatable="false">ca-app-pub-3044335875753764~9333610402</string>
    <string name="enter_link_or_search">Enter link or Search…</string>
    <string name="copy_msg">Copied</string>
    <string name="delete">Delete</string>
    <string name="open_url">Open Url</string>
    <string name="copy_url">Copy url</string>
    <string name="no_history">No History</string>
    <string name="video_orientation_video">Video orientation</string>
    <string name="video_orientation_sensor">Auto-rotate</string>
    <string name="video_resize_fit">Fit</string>
    <string name="video_resize_crop">Crop</string>
    <string name="error_details">Details</string>
    <string name="pref_framerate_matching">Auto frame rate matching</string>
    <string name="pref_framerate_matching_on">Switch display refresh rate to match video frame rate</string>
    <string name="pref_framerate_matching_off">Do not change display refresh rate</string>
    <string name="pref_tunneling">Tunneled playback</string>
    <string name="pref_tunneling_summary">Tunneling provides better support for 4K/HDR content, but may not work on all devices</string>
    <string name="pref_auto_pip">Auto picture-in-picture</string>
    <string name="pref_auto_pip_on">Switch to PiP when leaving the app</string>
    <string name="pref_auto_pip_off">Do not automatically switch to PiP</string>
    <string name="pref_skip_silence">Skip silence</string>
    <string name="pref_skip_silence_on">Skip parts with silence on the audio stream</string>
    <string name="pref_skip_silence_off">Play content as is</string>
    <string name="pref_repeat_toggle">Repeat toggle</string>
    <string name="pref_repeat_toggle_summary">Extra control to allow indefinitely loop video (requires app restart)</string>
    <string name="downloads">Downloads</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_app_installed">App Not Installed</string>
    <string name="no">No</string>
    <string name="what">What you want to do ?</string>
    <string name="shortcut_videos">Videos</string>
    <string name="search">Search</string>
    <string name="player_settings">Player Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="normal_user">Standard user</string>
    <string name="premiumUser">Premium User</string>
    <string name="sure_to_rem_key">Are you sure you want to remove your key ?</string>
    <string name="enter_key">Please enter your key</string>
    <string name="checkingKey">Checking your key</string>
    <string name="verifyingKey">Verifying your key</string>
    <string name="updateTest">Your V-Troid version is too old, please update to latest version</string>
    <string name="wapp">Images</string>
    <string name="wbapp">Videos</string>
    <string name="confirm">Confirm delete ?</string>
    <string name="select_all">Select all</string>
    <string name="save">Save</string>
    <string name="status_not_available">No Files found</string>
    <string name="delete_error">Couldn\'t delete some files</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="repost">Repost</string>
    <string name="allow_app">Allow App to Access WhatsApp Status Folder</string>
    <string name="allow">Allow</string>
    <string name="download_complete">Download Completed</string>
    <string name="warn_log">If you are facing issue in downloading posts after login, please logout</string>
    <string name="save_status_and_videos">Save Status and Videos</string>
    <string name="movies">Movies</string>
    <string name="camera">Camera</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="update_available">Update Available</string>
    <string name="report">Report</string>
    <string name="local_movies">Local Movies</string>
    <string name="act_premium">You can activate premium by entering key</string>
    <string name="enter_keyX">Enter Key</string>
    <string name="no_key">Don\'t have a key ? Get it for free from our instagram page</string>
    <string name="series">Series</string>
    <string name="watch_all">Watch All</string>
    <string name="change_theme">Change Primary Theme Color</string>
    <string name="change_color">Change the primary color of app</string>
    <string name="change_player">Change settings of video player</string>
    <string name="select">Done</string>
    <string name="standard_user">Standard User</string>
    <string name="z_pass">  Z Pass  </string>
    <string name="get_pro">Get Pro</string>
    <string name="get_premium_key">Get Premium Key</string>
    <string name="status_saver">Status Saver</string>
    <string name="change_secondary_theme_color">Change Secondary Theme Color</string>
    <string name="change_the_secondary_color_of_app">Change the secondary color of app</string>
    <string name="loading">Loading…</string>
    <string name="watch_history">Watch History</string>
    <string name="server_down">Server is down, I am working on it sorry for inconvinence</string>
    <string name="donate">Donate</string>
    <string name="ops">Ops! Something went wrong with servers,\n try to go back</string>
    <string name="go_back">Go Back</string>
    <string name="please_watch_a_small_ad_to_proceed">Please watch a small ad to proceed</string>

</resources>