<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="185dp"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    tools:ignore="SpUsage, ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/movie_button_bgx">

        <TextView
            android:id="@+id/updateText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/tcm"
            android:text="@string/act_premium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enterYes"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/get_text_depth"
            android:elevation="10dp"
            android:fontFamily="@font/tcm"
            android:padding="6dp"
            android:text="@string/enter_keyX"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateText" />

        <TextView
            android:id="@+id/enterGet"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/get_text_depth"
            android:elevation="-10dp"
            android:fontFamily="@font/tcm"
            android:padding="6dp"
            android:text="@string/no_key"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterYes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>